# f3_bot

./: .gcloudignore  .gitignore  Pipfile  README  README.md  cockroach - f3.session.sql  main.py  model.py  requirements.txt  root.crt
.github/workflows/: data-workflow-carpex.yml  data-workflow.yml  deploy-carpex.yml  deploy-churham.yml  deploy-development.yml  deploy-greenlevel.yml  deploy-peakcity.yml  deploy-production.yml  gcf.yml  slackbot-warmup.yml
data-validation/: Pipfile  gx-configuration.py  gx.ipynb  main.py  pyproject.toml  requirements.txt  root.crt
data-workflow/: Pipfile  README.md  interactive.ipynb  interactive_queries.ipynb  main.py  peakcity-migration.sql  requirements.txt  sqlite:
env/: env-carpex.yml  env-churham.yml  env-development.yml  env-greenlevel.yml  env-peakcity.yml
sheets_task/: README  db.py  main.py  model.py  requirements.txt  setup.py  test_main.py  util.py
sheets_task/src/: .gcloudignore  Pipfile  main.py  requirements.txt
sheets_task/src/sheets_task/: __init__.py  main.py  model.py  util.py
sheets_task/tests/: test_main.py
slackbot/: .gitignore  Pipfile  README  db.py  main.py  model.py  requirements.txt  test_util.py  util.py
slackbot/slackbot/: .gcloudignore  main.py  requirements.txt
slackbot/tests/: test_slackbot.py
